removed log4j stuff and updated examples to get server settings from seperate file